"fixed spacing in resume"

--- a/resume.css
+++ b/resume.css
@@ -90,6 +90,18 @@ a:visited {
     padding-right: 8px;
 }
 
+.prof-experience{
+    font-size: 16px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.education-experience {
+    font-size: 16px;
+    padding-left: 7px;
+    padding-right: 8px;
+}
+
 .experience .name {
     font-weight: bold;
     font-size: 20px;
